--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     background-image: url('imgs/schedulesitebg.jpg');
+    font-family: "Lacquer", system-ui;
+    font-weight: 400;
+    font-style: normal;
 }
 .table{
     background-color: darkgreen;
